<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Presentation</string>
    <string name="title_select_language">Bringing you closer to the people you love</string>
    <string name="label_view_more">View more</string>
    <string name="title_english_btn">Choose \nEnglish as your \nLanguage \n\n\nEnglish</string>
    <string name="title_sinhala_btn">ඔබේ භාෂාව \nසිංහල ලෙස \nතෝරන්න \n\n\nසිංහල</string>
    <string name="title_tamil_btn">உங்கள் \nமொழியாக \nதமிழை \nஅமைக்கவும் \n\n\nதமிழ்</string>
    <string name="title_china_btn">जल्द आ रहा है \n\n\nहिंदी</string>
    <string name="title_confirm_btn">Confirm</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="message_get_started_description">Book personalized video messages &amp; Shoutouts from your favorite people you love</string>
    <string name="title_get_started_btn">Join Now!</string>
    <string name="title_welcome">Welcome</string>
    <string name="subtitle_get_started">Connect from anywhere! \nWith people you love.</string>
    <string name="title_enter_mobile_number">Enter your mobile number</string>
    <string name="message_sms_charges">Depending on your carrier, you might receive charges for SMS.</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="title_next">Next</string>
    <string name="btn_send_code">Send Code</string>
    <string name="error_invalid_phone">The Phone number is invalid</string>
    <string name="error_invalid_country_code">The mobile code is invalid</string>
    <string name="title_country_picker">Select Country</string>
    <string name="message_get_otp_default">You will receive a one-time sms to verify your account. The SMS will contain a verification code, which you can enter in the next step.</string>
    <string name="get_otp_error_desc_one">You must be able to receive SMS to the phone number you are trying to verify.</string>
    <string name="auth0_audience_url">https://%s/userinfo</string>
    <string name="com_auth0_client_id">k4PQJsn9sjtYNw6YGQyy5WnU7JmMvYQs</string>
    <string name="com_auth0_domain">dev-ahamad.us.auth0.com</string>
    <string name="message_are_u_talent">Are you a talent?</string>
    <string name="message_send_request"><u>Send us a request</u></string>
    <string name="message_otp_sent">Verification code has been sent to </string>
    <string name="title_verify_phone_number">Verification</string>
    <string name="subtitle_verify_phone_number">Enter the 6 digit code sent to your mobile number</string>
    <string name="message_enter_code">Type the code below</string>
    <string name="message_did_not_receive_code">Didn\'t receive a code?</string>
    <string name="hint_enter_code">Enter Code</string>
    <string name="btn_verify">Verify</string>
    <string name="title_contact_us_support">Contact us for Support</string>
    <string name="subtitle_contact_us">Have questions or need to report an issue with a product or service? We’ve got you covered.</string>
    <string name="hint_name_contact_us">Name</string>
    <string name="hint_email_contact_us">Email*</string>
    <string name="hint_phone_number_contact_us">Phone Number*</string>
    <string name="hint_subject_contact_us">Subject*</string>
    <string name="hint_feedback_problem_contact_us">Describe your feedback or problem</string>
    <string name="hint_upload_image_contact_us">Upload Screenshot/ Image</string>
    <string name="hint_description_contact_us">Please note that we value and respect your privacy and will only use your data for
        services purposes and will not share it with third parties. Please read the our Privacy Statement for more information.</string>
    <string name="btn_submit">Submit</string>
    <string name="title_send_request">Join us</string>
    <string name="subtitle_send_request">For talent registrations only.</string>
    <string name="message_upload_photo">Upload a Photo*</string>
    <string name="hint_name_send_request">Name*</string>
    <string name="hint_email_send_request">Email*</string>
    <string name="hint_phone_number_send_request">Phone Number*</string>
    <string name="hint_top_social_media">Your top Social Media Platform*</string>
    <string name="hint_social_media_link">Social Media Account Username/Link*</string>
    <string name="hint_profile_description">Please describe yourself to us*</string>
    <string name="message_join_us_desc_one">If you meet the eligibility requirements, a representative will contact you within a few days to finish onboarding.</string>
    <string name="message_join_us_desc_two">Learn all you need to know,</string>
    <string name="message_join_us_desc_three"><u>visit our help centre</u></string>
    <string name="title_sign_up">Signup</string>
    <string name="sub_title_sign_up">Create Your Profile</string>
    <string name="hint_full_name_tv">Your full name</string>
    <string name="hint_email_tv">Email address</string>
    <string name="hint_birthday_tv">Birthday</string>
    <string name="hint_phone_number_tv">Phone number (this is your verified number)</string>
    <string name="btn_continue">Continue</string>
    <string name="hint_country_tv">Country</string>
    <string name="hint_sign_up_profile_description">Describe you here</string>
    <string name="message_sign_up_desc">Please note that we value and respect your privacy and will
        only use your data for services purposes. Read the our Privacy Statement for more information.
        Learn all you need to know, visit our help centre.</string>
    <string name="title_welcome_hello">Account Created</string>
    <string name="tv_post_register_desc">We use these preferences to recommend you favorite genres and people, Go on tap your favs!</string>
    <string name="btn_go_explore">Go Explore!</string>
    <string name="title_bottom_nav_home">Home</string>
    <string name="title_bottom_nav_search">Search</string>
    <string name="title_bottom_nav_explore">Explore</string>
    <string name="title_bottom_nav_activity">Activity</string>
    <string name="title_bottom_nav_profile">Profile</string>
    <string name="hint_search_here">Search here</string>
    <string name="hint_search_talent_home">Search favourite people here</string>
    <string name="title_recent_searches">Recent Searches</string>
    <string name="title_talent_searches">Talent Searches</string>
    <string name="title_people_you_know">People you may know</string>
    <string name="title_recommended">Recommended</string>
    <string name="message_no_data_talent_preferences">You have no talents by this category!</string>
    <string name="hint_search">Search</string>
    <string name="title_latest_news">Latest News</string>
    <string name="title_most_popular">Most Popular</string>
    <string name="message_see_all">See All</string>
    <string name="message_no_data_recent_search">You have no recent searches right now!</string>
    <string name="message_no_data_talents">You have no talents with this name</string>
    <string name="btn_request_now">Request Now</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_video_for">Who is this video for?</string>
    <string name="title_video_to">Video To</string>
    <string name="title_how_should_address">How should we address</string>
    <string name="title_instructions">Instructions</string>
    <string name="subtitle_instructions">Type your instructions for the video request</string>
    <string name="title_checkout">Check Out</string>
    <string name="title_payment_summary">Your Payment Summary</string>
    <string name="title_subtotal">Subtotal</string>
    <string name="title_services">Service &amp; Tax</string>
    <string name="title_promo_code">Promo Code Applied</string>
    <string name="title_total">Total</string>
    <string name="title_add_promo_code">Add Promo Code</string>
    <string name="btn_add_promo_code">Add</string>
    <string name="hint_promo_code">Promo code here</string>
    <string name="message_payment_checkout">Your card will not be charged until the order is complete.</string>
    <string name="title_confirm_order">Confirm Order</string>
    <string name="title_card_number">Card Number</string>
    <string name="title_expiry_date">Expiry Data</string>
    <string name="hint_card_expiry_date">MM-YYYY</string>
    <string name="title_cvv">CVV</string>
    <string name="hint_cvv">123</string>
    <string name="title_name_on_card">Name on Card</string>
    <string name="message_confirm_order_description">By booking, you agree to Hello’s Terms of Service, including Additional Terms and Privacy Policy.</string>
    <string name="btn_place_order">Place Order</string>
    <string name="title_your_orders">Your Orders</string>
    <string name="title_user_orders">All your order information can be viewed here</string>
    <string name="title_review">Review</string>
    <string name="title_processing">Processing</string>
    <string name="title_on_hold">On Hold</string>
    <string name="title_refund">Refund</string>
    <string name="message_no_data_ongoing_orders">You have no ongoing orders right now!</string>
    <string name="message_no_data_completed_orders">You have no completed orders right now!</string>
    <string name="message_no_data_declined_orders">You have no declined orders right now!</string>
    <string name="message_no_data_rejected_orders">You have no rejected orders right now!</string>
    <string name="message_no_data_expired_orders">You have no expired orders right now!</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="title_review_order_to_continue">Please review order status to continue</string>
    <string name="message_its_for">It\'s for</string>
    <string name="btn_decline_order">Decline</string>
    <string name="btn_proceed_order">Proceed</string>
    <string name="title_reviewing_stage">Reviewing</string>
    <string name="title_processing_stage">Processing</string>
    <string name="title_on_hold_stage">On Hold</string>
    <string name="title_approved_stage">Approved</string>
    <string name="title_expired_stage">Expired</string>
    <string name="title_refund_stage">Refund</string>
    <string name="message_no_related_talent">Sorry, The talent associate with this Order is not longer available.</string>
    <string name="title_help">Help</string>
    <string name="title_account_services">Account Services</string>
    <string name="title_copyright">Copyright</string>
    <string name="title_terms_of_use">Terms of Use</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_software_licence">Software Licenses</string>
    <string name="title_pricing_terms">Pricing &amp; Payments Terms</string>
    <string name="title_faq">FAQ</string>
    <string name="title_select_country">Select Country</string>
    <string name="label_select_language">Select Language</string>
    <string name="title_view_profile">View Profile</string>
    <string name="title_manage_account">Manage Account</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_your_favourites">Your Favourites</string>
    <string name="title_orders">Orders</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_promotions">Promotions</string>
    <string name="title_settings">Settings</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_help_center">Help Centre</string>
    <string name="title_user_information">User Information</string>
    <string name="title_name">Name</string>
    <string name="title_bio">Bio</string>
    <string name="title_update">Update</string>
    <string name="title_update_mobile">Update Number</string>
    <string name="hint_favourites">Search favourite people here</string>
    <string name="message_no_data_favourites">You have no favourites right now!</string>
</resources>