<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_bottom_nav_home" />
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/title_bottom_nav_search" />
    <item
        android:id="@+id/nav_explore"
        android:enabled="true"
        android:icon="@drawable/ic_nav_explore"
        android:title="@string/title_bottom_nav_explore" />
    <item
        android:id="@+id/nav_activity"
        android:enabled="true"
        android:icon="@drawable/ic_nav_activity"
        android:title="@string/title_bottom_nav_activity" />
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_bottom_nav_profile" />
</menu>
