<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    tools:context=".presentation.contact.SendRequest">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_send_request"
                style="@style/WhiteBoldTextStyle.Size34"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/title_send_request"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_subtitle_send_request"
                style="@style/WhiteNormalTextStyle.Size14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/subtitle_send_request"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_send_request" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_talent_pro_pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="24dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_upload_pro_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title_send_request" />

            <TextView
                android:id="@+id/tv_upload_photo"
                style="@style/WhiteNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/message_upload_photo"
                app:layout_constraintEnd_toEndOf="@+id/iv_talent_pro_pic"
                app:layout_constraintStart_toStartOf="@+id/iv_talent_pro_pic"
                app:layout_constraintTop_toBottomOf="@+id/iv_talent_pro_pic" />

            <TextView
                android:id="@+id/tv_title_name"
                style="@style/WhiteNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/hint_name_send_request"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_upload_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_send_request"
                    style="@style/PrimaryEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_email"
                style="@style/WhiteNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/hint_email_send_request"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_send_request"
                    style="@style/PrimaryEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_phone_number"
                style="@style/WhiteNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/hint_phone_number_send_request"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number_send_request"
                    style="@style/PrimaryEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_social_media_platform"
                style="@style/WhiteNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/hint_top_social_media"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_phone_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_social_media_platform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_social_media_platform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_social_media_platform"
                    style="@style/PrimaryEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_social_media_link"
                style="@style/WhiteNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/hint_social_media_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_social_media_platform" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_social_media_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_social_media_link">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_social_media_link"
                    style="@style/PrimaryEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_talent_description"
                style="@style/WhiteNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/hint_profile_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_social_media_link" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_talent_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_talent_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_talent_description"
                    style="@style/PrimaryEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="start"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_desc_send_request_one"
                style="@style/WhiteNormalTextStyle.Size12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/message_join_us_desc_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_talent_description" />

            <TextView
                android:id="@+id/tv_desc_send_request_two"
                style="@style/WhiteNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/message_join_us_desc_two"
                app:layout_constraintEnd_toStartOf="@+id/tv_desc_send_request_three"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_desc_send_request_one"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_send_request_one" />

            <TextView
                android:id="@+id/tv_desc_send_request_three"
                style="@style/WhiteNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:layout_marginEnd="24dp"
                android:text="@string/message_join_us_desc_three"
                app:layout_constraintBottom_toBottomOf="@+id/tv_desc_send_request_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_desc_send_request_two"
                app:layout_constraintTop_toTopOf="@+id/tv_desc_send_request_two" />

            <Button
                android:id="@+id/btn_submit_send_request"
                style="@style/PinkButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_send_request_two" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>