<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_splash"
    tools:context=".presentation.LanguageSelection">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_choose_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="160dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btn_sinhala"
                    style="@style/GrayButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_sinhala_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_tamil"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_tamil"
                    style="@style/GrayButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/title_tamil_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_sinhala"
                    app:layout_constraintEnd_toStartOf="@+id/btn_english"
                    app:layout_constraintStart_toEndOf="@+id/btn_sinhala"
                    app:layout_constraintTop_toTopOf="@+id/btn_sinhala" />

                <Button
                    android:id="@+id/btn_english"
                    style="@style/GrayButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/title_english_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_tamil"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_tamil"
                    app:layout_constraintTop_toTopOf="@+id/btn_tamil" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>